# documentation

./: .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .vale-ci.ini  .vale.ini  .yarnrc.yml  AGENTS.md  ASSEMBLY_REPORT.md  COMPONENTS.md  COMPONENT_REGISTRY.md  CONTACT.md  CONTRIBUTING.md  INFORMATION-ARCHITECTURE.md  LICENSE.md  LLM-CONTRIBUTING.md  MARKDOWN_PIPELINE.md  READABILITY.md  README.ko.md  README.md  SNIPPABLE_CANDIDATES.md  SNIPPET_AUDIT.md  STYLE.md  TAXONOMY.md  UTILITIES.md  ZOOMABLE_IMAGES.md  _redirects  assemble.js  config.yml  context.json  debugging.json  delete.py  delete_duplicate.py  deleteme.json  docusaurus.config.js  dprint.json  (+19 more)
sample-apps/python/: README.md  pyproject.toml
sample-apps/python/activity_timeouts_retires/: activities.py  run_worker.py  workflows.py  your_workflows_dacx.py
sample-apps/python/backgroundcheck_boilerplate/: dockerfile
sample-apps/python/backgroundcheck_replay/: README.md  backgroundcheck_dacx.py  backgroundcheck_non_deterministic_code_dacx.py  main.py  main_unrestricted.py  ssntraceactivity.py
sample-apps/python/continue_as_new/: main.py  your_worker.py  your_workflows_dacx.py
sample-apps/python/dynamic_handlers/: README.md  your_dynamic_activity_dacx.py  your_dynamic_query_dacx.py  your_dynamic_signal_dacx.py  your_dynamic_workflow_dacx.py  your_worker_activity_dacx.py  your_worker_query_dacx.py  your_worker_signal_dacx.py  your_worker_workflow_dacx.py
sample-apps/python/query_your_workflow/: query_dacx.py  wf_query_dacx.py  (+1 more)
(+7994 files in other folders)
